--- a/index.pug
+++ b/index.pug
@@ -4,6 +4,8 @@ html(lang='en')
         meta(charset='UTF-8')
         title vk-friens-map
         link(href='style.css' rel='stylesheet')
+        link(rel='preconnect' href='https://fonts.gstatic.com')
+        link(rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@1,300&display=swap')
         script(src='https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js')
         script(src='https://vk.com/js/api/openapi.js' type='text/javascript')
         script(src='https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js' type='text/javascript')
@@ -11,7 +13,9 @@ html(lang='en')
 
     body
         .container
-            h1#headerInfo
+            .headline
+                h1 Карта друзей из вк
+                button.load-vk Подключить вк
             #map(style='width: 100%; height: 100vh;')
 
             #results
